deploy: 1ef6ecca89b65ce1db46dffba1f65cb9c8a39a8c

--- a/index.html
+++ b/index.html
@@ -476,6 +476,54 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="paragraph">
 <p>Note how developing a methodology is different from identifying best practices, covering case studies, and creating definitions.  A methodology is something one follows; it is a fully defined process.  And by targeting tool independence, we can aim for developing a solution that will stand the test of time, just as version control methods have lasted through cvs, svn, and now git.</p>
 </div>
+<div class="sect2">
+<h3 id="_methodology_documentation">Methodology Documentation</h3>
+<div class="paragraph">
+<p>The methodology is being modeled in a series of YAML files under the <code>architecture</code> folder.  A script is then used to generate this readme and the DOF architecture document (located in the <code>dist</code> folder).  See the <code>docs</code> folder for mataterial on the format of the architecture YAML files.</p>
+</div>
+<div class="paragraph">
+<p>Please feel free to join the conversation by posting questions/comments as issues in the <a href="http://dof.sliderule.io">DOF repository</a>.</p>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_related_projects">Related Projects</h3>
+<div class="ulist">
+<div class="title">Mach 30 Related Projects</div>
+<ul>
+<li>
+<p><a href="https://opendesignengine.net">Open Design Engine</a> - legacy OSHW project hosting portal built on <a href="https://www.redmine.org/">Redmine</a></p>
+</li>
+<li>
+<p><a href="http://sliderule.io">Sliderule</a> - Reference implementation of DOF, being developed in stages</p>
+<div class="ulist">
+<ul>
+<li>
+<p><a href="https://github.com/7BIndustries/sliderule-cli">Sliderule CLI</a> - Initial component of Sliderule, a command line interface implementation of DOF developed by <a href="https://github.com/7BIndustries/">7BIndustries</a></p>
+</li>
+</ul>
+</div>
+</li>
+</ul>
+</div>
+<div class="ulist">
+<div class="title">Sources of Inspiration</div>
+<ul>
+<li>
+<p><a href="http://github.howstr.com/">Howstr</a> - A project by Matthew Maier to capture how to capture, share, and discover tangible projects</p>
+</li>
+</ul>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_further_reading">Further Reading</h3>
+<div class="ulist">
+<ul>
+<li>
+<p><a href="https://www.pearson.com/us/higher-education/product/Gibb-Building-Open-Source-Hardware-DIY-Manufacturing-for-Hackers-and-Makers/9780133373905.html">Building Open Source Hardware: DIY Manufacturing for Hackers and Makers</a> by Alicia Gibb</p>
+</li>
+</ul>
+</div>
+</div>
 </div>
 </div>
 <div class="sect1">
@@ -918,7 +966,7 @@ details: |
 <div id="footer">
 <div id="footer-text">
 Version v0.1.6<br>
-Last updated 2020-12-14 00:03:55 UTC
+Last updated 2020-12-14 00:24:25 UTC
 </div>
 </div>
 </body>
