deploy: 03c0b02e57d7dd87bdf57bc8a928264460aaf480

--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 @media amzn-kf8{#header,#content,#footnotes,#footer{padding:0}}
 </style>
 </head>
-<body class="article">
+<body class="article toc2 toc-left">
 <div id="header">
 <h1>Distributed OSHW Framework (DOF)</h1>
 <div class="details">
@@ -445,6 +445,34 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <span id="email" class="email"><a href="mailto:jrs@mach30.org">jrs@mach30.org</a></span><br>
 <span id="revnumber">version v0.1.6,</span>
 <span id="revdate">3/12/2019</span>
+</div>
+<div id="toc" class="toc2">
+<div id="toctitle">Table of Contents</div>
+<ul class="sectlevel1">
+<li><a href="#_introduction">Introduction</a>
+<ul class="sectlevel2">
+<li><a href="#_methodology_documentation">Methodology Documentation</a></li>
+<li><a href="#_related_projects">Related Projects</a></li>
+<li><a href="#_further_reading">Further Reading</a></li>
+</ul>
+</li>
+<li><a href="#_stakeholder_needs">Stakeholder Needs</a></li>
+<li><a href="#_user_stories">User Stories</a>
+<ul class="sectlevel2">
+<li><a href="#_user_story_1_branch_oshw">User Story 1: Branch OSHW</a></li>
+<li><a href="#_user_story_2_fork_oshw">User Story 2: Fork OSHW</a></li>
+<li><a href="#_user_story_3_merge_oshw">User Story 3: Merge OSHW</a></li>
+<li><a href="#_user_story_4_composition_of_oshw">User Story 4: Composition of OSHW</a></li>
+</ul>
+</li>
+<li><a href="#_data_structures">Data Structures</a>
+<ul class="sectlevel2">
+<li><a href="#_component">Component</a></li>
+<li><a href="#_component_list_item">Component List Item</a></li>
+<li><a href="#_activity_step">Activity Step</a></li>
+</ul>
+</li>
+</ul>
 </div>
 </div>
 <div id="content">
@@ -966,7 +994,7 @@ details: |
 <div id="footer">
 <div id="footer-text">
 Version v0.1.6<br>
-Last updated 2020-12-14 00:33:22 UTC
+Last updated 2020-12-14 00:51:05 UTC
 </div>
 </div>
 </body>
